# OnlyiFlow

./: .gitattributes  .gitignore  .mcp.claude.json  .mcp.json  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.zcode-plugin/: plugin.json
docs/: engineering-spec.md  product-spec.md  release-guide.md
docs/evaluations/: 2026-07-16-task4-skill-evaluation.md  2026-07-17-task5-efficiency-and-gate-value.md  2026-07-17-task6-three-host-release-smoke.md  2026-07-17-task7-release-readiness.md  2026-07-18-v0.2.0-claude-user-install.md  2026-07-19-v0.3.0-gate-configuration.md
docs/plans/: 2026-07-16-plugin-first-framework-foundation.md  2026-07-18-next-optimization-direction.md  2026-07-18-v0.2.0-claude-user-install.md
docs/research/: 2026-07-16-three-host-loader-contract.md
packaging/claude/: .mcp.claude.json
scripts/: __init__.py  build_loader_candidates.py  run_claude_user_install_acceptance.py  run_claude_user_install_lifecycle.py  run_efficiency_measurements.py  run_release_smoke.py  run_skill_evaluations.py
server/: stdio.py
tests/: support.py  test_claude_user_install.py  test_claude_user_install_acceptance.py  test_claude_user_install_lifecycle.py  test_flow_runtime.py  test_foundation_contract.py  test_gate_configuration.py  test_gate_runtime.py  test_mcp_contract.py  test_project_runtime.py  test_release_documentation.py  test_skill_contract.py  test_skill_evaluation_runner.py  test_task5_measurements.py  test_task6_release_smoke.py  test_wave_privacy.py  test_wave_runtime.py
(+20 files in other folders)
