[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onlyiflow"
version = "0.1.0"
description = "Personal development-flow state and landing-evidence plugin foundation."
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.4,<4"]

[tool.setuptools.packages.find]
where = ["src"]
