[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onlyiflow"
version = "0.2.0"
description = "Explicit project-local development-flow state and deterministic landing evidence."
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.4,<4"]

[tool.setuptools.packages.find]
where = ["src"]
